Fix odd sidebar alignment issue

--- a/static/style.css
+++ b/static/style.css
@@ -82,12 +82,10 @@ html {
 }
 
 .last {
-    position: absolute;
     width: 177px;
     height: 32px;
+    display: block;
     overflow: hidden;
-    top: 25px;
-    left: 75px;
     color: #787878;
 }
 
